Test coverage for `ExchangeClientBuilder`.